src/snapshots/kk__tests__compiler__typecheck__progressive_unification_6.kk.snap
---
source: src/main.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let match = \(x, f) => x.f()

let arrayMap =
  \([], _) => []
  \([head, ..._], f) => [head.f()]

let result = [{foo = 2, bar = 'hi'}].arrayMap(\o => o.zap)

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/progressive_unification_6.kk:7:55
  │
7 │ let result = [{foo = 2, bar = 'hi'}].arrayMap(\o => o.zap)
  │                                                       ^^^ No such property
  │
  = Available properties:
      bar
      foo
